--- a/pages/category.html
+++ b/pages/category.html
@@ -590,7 +590,6 @@
 
 
 <div class="gap"></div>
-<section id="footer">
   <section id="footer">
     <div class="gap"></div>
     <div class="container">
@@ -804,13 +803,13 @@
       </div>
     </div>
   </section>
-</section>
 <!-- data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top" -->
   <script src="../assets/js/core/jquery-3.6.0.js" type="text/javascript"></script>
   <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
 
   <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="../assets/plugins/range_slider/range.js" type="text/javascript"></script>
+  <script src="../
+  assets/plugins/range_slider/range.js" type="text/javascript"></script>
   <script>
      
 
