--- a/index.html
+++ b/index.html
@@ -987,13 +987,14 @@
         </svg>
         
     </a>
+    </div>
+
   </section>
 
 <div class="gap"></div>
 
 
 
-<section id="footer">
   <section id="footer">
     <div class="gap"></div>
     <div class="container">
@@ -1209,7 +1210,6 @@
       </div>
     </div>
   </section>
-</section>
 
   <script src="assets/js/core/jquery-3.6.0.js" type="text/javascript"></script>
 
@@ -1224,7 +1224,7 @@
   <script>
       $('.hero_slider').slick({
   dots: true,
-  infinite: false,
+  infinite: true,
   speed: 300,
   slidesToShow: 1,
   slidesToScroll: 1,
@@ -1247,8 +1247,6 @@
         slidesToShow: 3,
         slidesToScroll: 3,
         infinite: true,
-        centerMode: true,
-        centerPadding: '40px',
       }
     },
     {
@@ -1256,7 +1254,6 @@
       settings: {
         slidesToShow: 2,
         slidesToScroll: 2,
-        centerMode: true,
       }
     },
     {
@@ -1264,7 +1261,6 @@
       settings: {
         slidesToShow: 1,
         slidesToScroll: 1,
-        centerMode: true,
       }
     }
   ]
@@ -1282,9 +1278,7 @@ height();
 $(window).resize(function(){
   height();
 });
-// $(".food_card").click(function(){
-//   window.location.href = "pages/details.html";
-// });
+
   </script>
 </body>
 </html>
